<resources>
    <string name="app_name">سامانه تیک دانشجویی(غیر رسمی)</string>
    <string name="name">نام درس</string>
    <string name="all_absents">تمام غیبت ها</string>
    <string name="status">وضعیت</string>
    <string name="details">جزئیات</string>
    <string name="acceptableAbsents">غیبت های موجه:</string>
    <string name="unacceptable">غیبت های غیر موجه:</string>
    <string name="all">تمام غیبت ها:</string>
    <string name="status_d">وضعیت:</string>
    <string name="list_of_absents">لیست تمام غیبت ها:</string>
    <string name="pass">رمز عبور</string>
    <string name="username">نام کاربری</string>
    <string name="confirm">تایید</string>
    <string name="exit">خروج از حساب</string>
    <string name="info_i">اطلاعات</string>
    <string name="info">برنامه غیر رسمی سامانه تیک دانشجویی دانشگاه بیرجند\n\nنسخه: 1.0\n\nبرنامه نویس: ایمان
        احراری\n\nتلگرام و اینستاگرام: @iahrari
    </string>
    <string name="no_internet_title">اینترنت موجود نیست!</string>
    <string name="no_internet_body">لطفا برای دریافت اطلاعات به اینترنت متصل شوید.</string>
    <string name="no_internet_button">متصل شد</string>
    <string name="okay">باشه</string>
    <string name="allowedAbsents">غیبت های مجاز:</string>
    <string name="no_data_title">داده ای در دسترس نیست</string>
    <string name="no_data">متاسفانه داده ای برای نمایش دادن وجود ندارد.</string>
    <string name="teacher">استاد</string>
    <string name="date">تاریخ</string>
    <string name="enter">ورود</string>
    <string name="exit_s">خروج</string>
</resources>